[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UIScenes/BattleHUD.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UIScenes/CharactorUITop.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UIScenes/CollectionIndicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UIScenes/CharactorUIBottom.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UIScenes/TurnIndicator.tscn" type="PackedScene" id=5]

[node name="BattleHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
player_ui = NodePath("MarginContainer/VBoxContainer/BottomCharaUI")
enemy_ui = NodePath("MarginContainer/VBoxContainer/TopCharaUI")
player_indicator = NodePath("MarginContainer/VBoxContainer/BattleIndicator")
enemy_indicator = NodePath("MarginContainer/VBoxContainer/BattleIndicator2")
turn_indicator = NodePath("MarginContainer/VBoxContainer/CenterContainer/TurnIndicator")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 960.0
custom_constants/separation = 0
alignment = 1

[node name="TopCharaUI" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 14.0
margin_right = 512.0
margin_bottom = 104.0

[node name="BattleIndicator2" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 512.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 120 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 32.0
margin_top = 224.0
margin_right = 480.0
margin_bottom = 672.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TurnIndicator" parent="MarginContainer/VBoxContainer/CenterContainer" instance=ExtResource( 5 )]
margin_right = 448.0
margin_bottom = 448.0

[node name="BattleIndicator" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 672.0
margin_right = 512.0
margin_bottom = 792.0
rect_min_size = Vector2( 0, 120 )

[node name="BottomCharaUI" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 792.0
margin_right = 512.0
margin_bottom = 882.0
